--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </div>
     <div class="drag-area">
     	<span class="visible">
-	      Drag & drop image here or
+	      Drag & drop image here
 	      <span class="select" role="button">Browse</span>
 	</span>
-	<span class="on-drop">Drop images here</span>
+	<!-- <span class="on-drop">Drop images here</span>
     	<input name="file" type="file" class="file" multiple  />
-    </div>
+    </div> -->
 
     <!-- IMAGE PREVIEW CONTAINER -->
     <div class="container"></div>
