--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div class="card">
     <div class="top">
         <img src="imgmock.jpeg" alt="" style="height: 20px; width: 40px;">
-       <p>Drag & drop  uploading</p>
+       <p>Drag & drop image uploading</p>
        <button type="button">Upload</button>
     </div>
     <div class="drag-area">
