--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
         <img src="imgmock.jpeg" alt="" style="height: 20px; width: 40px;">
        <p>Drag & drop image uploading</p>
-       <button type="button">Upload</button>
+       <button type="">Upload</button>
     </div>
     <div class="drag-area">
     	<span class="visible">
