--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 	      Drag & drop image here
 	      <span class="select" role="button">Browse</span>
 	</span>
-	
+	<!-- <span class="on-drop">Drop images here</span>
+    	<input name="file" type="file" class="file" multiple  />
+    </div> -->
 
     <!-- IMAGE PREVIEW CONTAINER -->
     <div class="container"></div>
